examples/test/testpolicy18800.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18800
  namespace: namespace146
spec:
  podSelector:
    matchLabels:
      key1: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value5
      podSelector:
        matchLabels:
          key36: value6
          key16: value11
          key44: value41
